# sicop-mdsj

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  check_db.py  docker-compose.dev.yml  docker-compose.yml  fix.py  fix_api_test.py  fix_auth.py  fix_bitacora.py  fix_dt.py  fix_errors.py  fix_test.py  fix_tests2.py  fix_widgets.py  inspect_chart.py  inspect_data.py  inspect_dom.py  page_output.html  parse_html.py  run_e2e.sh  run_e2e_all_in_one.sh  run_e2e_debug.sh  screenshot.py  test_db.py  test_export.xlsx  test_pw.py  test_pw_cors.py  test_recharts.js  test_svg.html  verify_dashboard_e2e.py  verify_t42_ui.py
backend/: .env.example  Dockerfile  alembic.ini  all_routes.txt  pyproject.toml  query_logs.py  test_detalle.py  test_endpoint.py  verify_queries.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_ref_catalogos.py  0003_seed_auth_umbrales.py  0004_inversiones_alta_prioridad.py  1707131a8a8b_aumentar_longitud_de_etapa_f8_en_.py  36ad7695cdfb_aumentar_campos_string_en_inversiones.py  a1b2c3d4e5f6_ampliar_ejec_jerarquia_ciudadana.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
backend/app/exportar/: __init__.py  excel.py  pdf.py  reportes.py
backend/scripts/: dev_seed_sintetico_2025.py  get_map_count.py  ping_siga.py  seed_dev_mef_manual.py
backend/tests/: test_auditoria.py  test_auth.py  test_exportar_publico.py  test_logging.py  test_ltree_builder.py  test_metas_repo.py  test_permisos.py  test_semaforo.py  test_sync_catalogos.py  test_sync_invierte.py  test_sync_siaf.py
(+211 files in other folders)
