[project]
name = "sicop-backend"
version = "0.1.0"
description = "SICOP-MDSJ Backend — FastAPI + PostgreSQL + SQL Server"
requires-python = ">=3.12"
dependencies = [
    # Core web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database — PostgreSQL
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.10",

    # Database — SQL Server (SIGA)
    "pyodbc>=5.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",

    # HTTP client (API MEF)
    "httpx>=0.27.2",
    "tenacity>=9.0.0",

    # Cache
    "redis>=5.1.1",

    # Jobs
    "apscheduler>=3.10.4",

    # Logging
    "structlog>=24.4.0",

    # Export
    "openpyxl>=3.1.5",
    "weasyprint>=63.0",
    "reportlab>=4.2.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
